# cdk-cf-eks

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
cdk/: .coveragerc  .flake8  Pipfile  README.md  UPGRADES.md  app.py  cdk.json  config-original.yaml  config.yaml  config_template.yaml  pyproject.toml  requirements.txt  setup.py  util.py
cdk/domino/: domino_stack.py
cdk/domino_cdk/: __init__.py  agent.py  aws_configurator.py  config_template.yaml  domino_stack.py  efs_stack.py  eks_stack.py  master_stack.py  s3_stack.py  util.py  vpc_stack.py
cdk/domino_cdk/config/: __init__.py  acm.py  base.py  efs.py  eks.py  iam.py  install.py  route53.py  s3.py  template.py  util.py  vpc.py
cdk/domino_cdk/manifests/: calico.yaml
cdk/domino_cdk/provisioners/: __init__.py  acm.py  ami.py  efs.py  eks.py  lambda_utils.py  s3.py  vpc.py
cdk/domino_cdk/provisioners/eks/: __init__.py  eks_cluster.py  eks_iam.py  eks_iam_roles_for_k8s.py  eks_nodegroup.py
cdk/domino_cdk/provisioners/install_calico_lambda_code/: main.py  tigera-operator-v3.18.4-1.tgz  values.yaml
cdk/domino_cdk/provisioners/lambda/: backup_post_creation_tasks.py
cdk/domino_cdk/provisioners/lambda_files/: backup_post_creation_tasks.py  cluster_post_creation_tasks.py  cluster_post_deletion_tasks.py  fix_missing_tags.py
cdk/eks/: eks_stack.py
cdk/policies/: README.md  minimal_permissions_for_cdk_deploy_and_destroy.json  minimal_permissions_for_cf_ui_and_terraform.json
cdk/tests/: test_config.py
cdk/tests/unit/: test_agent.py
cdk/tests/unit/config/: __init__.py  test_acm.py  test_config.py  (+6 more)
(+57 files in other folders)
